feat: implement academic onboarding and login flows

--- a/src/app/routes/academics/academics.html
+++ b/src/app/routes/academics/academics.html
@@ -54,7 +54,7 @@
               <mat-card-header>
                 <div class="card-top-row">
                   <span class="subject-code">
-                    {{ item.yearBatch ? item.yearBatch + ' Year/Batch' : '' }}
+                    {{ item.yearBatch ? item.yearBatch + ' Year' : '' }}
                   </span>
                   <mat-chip class="status-badge university">
                     {{ item.type === 'university' ? 'University' : 'High School' }}
