--- a/src/app/theme/header/header.html
+++ b/src/app/theme/header/header.html
@@ -17,7 +17,7 @@
     <mat-icon>search</mat-icon>
   </button> -->
 
-  <!-- <app-translate /> -->
+  <app-translate />
 
   <button matIconButton class="hide-small" (click)="toggleFullscreen()">
     <mat-icon>fullscreen</mat-icon>
@@ -25,7 +25,7 @@
 
   <app-notification class="hide-small" />
 
-  <!-- <app-user /> -->
+  <app-user />
 
   <button matIconButton class="hide-small" (click)="toggleSidenavNotice.emit()">
     <mat-icon>list</mat-icon>
